--- a/feed.yaml
+++ b/feed.yaml
@@ -37,3 +37,26 @@ item:
     file: /audio/TFIT05.mp3
     duration: 00:00:22
     length: 352,587
+description:  Jerome Hardaway explores how generative AI can revolutionize the software development process by increasing efficiency, automating repetitive tasks, and creating more sophisticated and innovative solutions.
+    published: Thu, 26 Jan 2023 18:00:00 GMT
+    file: /audio/TFIT03.mp3
+    duration: 00:00:19
+    length: 305,488
+  - title: EP04-Building Responsible AI Systems
+    description:   Ayodele Odubela, a Data Scientist, Machine Learning professional and AI Entrepreneur, discusses the ethical issues surrounding the rapid adoption of AI systems, including transparency, minimizing bias, ensuring fairness, and potential ramifications around privacy, security, and governance.
+    published: Thu, 2 Feb 2023 18:00:00 GMT
+    file: /audio/TFIT04.mp3
+    duration: 00:00:29
+    length: 470,668
+  - title: EP05-Crafting an AI Strategy For Your Business
+    description: Andreas Welsch joins this discussion to share insights on crafting an AI strategy for businesses that considers evolving technology, ethics, and legal implications, drawing from his extensive experience in managing stakeholder relationships and leading AI projects across Fortune 500 companies.
+    published: Thu, 9 Feb 2023 18:00:00 GMT
+    file: /audio/TFIT05.mp3
+    duration: 00:00:22
+    length: 352,587
+  - title: EP06-Understanding AI Ethics
+    description: Dr. Jane Doe delves into the complexities of AI ethics, discussing the importance of ethical guidelines, real-world implications, and the future of ethical AI development.
+    published: Thu, 16 Feb 2023 18:00:00 GMT
+    file: /audio/TFIT06.mp3
+    duration: 00:00:25
+    length: 400,000
